--- a/src/app/components/cars-list/cars-list.component.html
+++ b/src/app/components/cars-list/cars-list.component.html
@@ -10,7 +10,7 @@
 
     <div class="cards_box">
       <app-cars-card
-        *ngFor="let car of cars.slice(20, 28)"
+        *ngFor="let car of cars"
         [car]="car"
       ></app-cars-card>
     </div>
