--- a/src/app/components/filtered/filtered.component.html
+++ b/src/app/components/filtered/filtered.component.html
@@ -17,6 +17,7 @@
         <option value="1995">1995</option>
         <option value="2000">2000</option>
         <option value="2005">2005</option>
+        <option value="2010">2010</option>
         <option value="2015">2015</option>
         <option value="2020">2020</option>
         <option value="1900">All</option>
@@ -32,6 +33,7 @@
         <option value="2000">2000</option>
         <option value="2005">2005</option>
         <option value="2010">2010</option>
+        <option value="2015">2015</option>
         <option value="2020">2020</option>
         <option value="2025">2025</option>
         <option value="2025">All</option>
