--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -18,9 +18,16 @@
 </div>
 
 <div class="wrapper">
+    <h1 class="liked_cars">თქვენი განცხადებები</h1>
+    <app-my-cars></app-my-cars>
+</div>
+
+<div class="wrapper">
     <h1 class="liked_cars">თქვენს მიერ მოწონებული მანქანები</h1>
     <app-favorite-cars></app-favorite-cars>
 </div>
+
+
 
 
 
